Update README.md
Separated into smaller documents.